# loan-tool-tauri

./: loan-tool-tauri.slnx
.github/workflows/: main.yml
src/: App.razor  LoanToolTauri.csproj  Program.cs  _Imports.razor
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/Layouts/: MainLayout.razor
src/Models/: Loan.cs
src/Pages/: Budgets.razor  Home.razor  ViewModelComponentBase.cs
src/ViewModels/: MainViewModel.cs
src/wwwroot/: index.html
tests/LoanToolUnitTests/: LoanToolUnitTests.csproj  UnitTest1.cs
