[package]
name = "loan-tool-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "loan_tool_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.45", features = ["serde"] }
uuid = { version = "1.23.4", features = ["v7", "serde"] }
sea-orm = { version = "1.1.20", features = [
    "sqlx-sqlite",
    "with-chrono",
    "with-uuid",
    "with-rust_decimal",
] }
rust_decimal = { version = "1.42.1", features = [
    "serde-with-str",
    "maths",
    "macros",
] }
